syntax = "proto3";

package oura.decoded;

// Auto-generated from newMessageInfo + FIELD_NUMBER constants
// Total messages: 137

message ActivityInfoEvent {
  int32 timestamp = 1;
  int32 step_count = 2;
  int32 met_level1 = 3;
  int32 met_level2 = 4;
  int32 met_level3 = 5;
  int32 met_level4 = 6;
  int32 met_level5 = 7;
  int32 met_level6 = 8;
  int32 met_level7 = 9;
  int32 met_level8 = 10;
  int32 met_level9 = 11;
  int32 met_level10 = 12;
  int32 met_level11 = 13;
  int32 met_level12 = 14;
  int32 met_level13 = 15;
}

message AddActivity {
  int64 timestamp_ms_activity_start = 1;
  int64 timestamp_ms_activity_end = 2;
  int32 origin = 3;
  bytes activity_uuid = 4;
  int32 activity_type = 5;
  int32 intensity = 6;
  string label = 7;
  int32 active_energy = 8;
  int32 total_distance = 9;
  int32 swimming_stroke_count = 10;
  bytes healthkit_source_info = 11;
}

message AlertEvent {
  int32 timestamp = 1;
  int32 alert_type = 2;
}

message AmbientEvent {
  int32 timestamp = 1;
  int32 value = 2;
}

message BedtimePeriod {
  int32 timestamp = 1;
  int32 bedtime_start = 2;
  int32 bedtime_end = 3;
  int32 start_timezone_seconds = 4;
  int32 end_timezone_seconds = 5;
}

message BleConnectionIndConnected {
  int32 timestamp = 1;
  int32 peer_addr_type = 2;
  int32 peer_addr = 3;
}

message BleConnectionIndConnectedExtended {
  int32 timestamp = 1;
  int32 peer_addr_type = 2;
  int32 peer_addr = 3;
  int32 connection_handle = 4;
  int32 non_bonded_connection_allowed = 5;
}

message BleConnectionIndDisconnected {
  int32 timestamp = 1;
  int32 average_rssi = 2;
  int32 min_rssi = 3;
  int32 max_rssi = 4;
  int32 sample_count = 5;
  int32 seconds_in_foreground_mode = 6;
  int32 seconds_in_background_mode = 7;
}

message BleConnectionIndDisconnectedExtended {
  int32 timestamp = 1;
  int32 average_rssi = 2;
  int32 seconds_in_foreground_mode = 3;
  int32 seconds_in_background_mode = 4;
  int32 disconnect_reason = 5;
  int32 info_bitfield = 6;
  int32 parameter_update_state = 12;
  int32 time_last_parameter_update = 13;
}

message BleConnectionIndDisconnectedExtended2 {
  int32 timestamp = 1;
  int32 tx_packet_size = 2;
  int32 rx_packet_size = 3;
  int32 tx_byte_count = 4;
  int32 rx_byte_count = 5;
}

message BleConnectionIndDisconnectedExtendedLinkQuality {
  int32 timestamp = 1;
  int32 connection_event_count = 2;
  int32 crc_error = 3;
  int32 retransmissions = 4;
  int32 missed_connection_events = 5;
}

message CoilControlDetails {
  bytes self_test_result = 1;
  bytes pin_vboost_en = 2;
  bytes pin_coil_switch = 3;
  bytes pin_rsense_bypass = 4;
  bytes pin_vboost_pwm = 5;
}

message CorruptionLogEntry {
  int32 corruption_start_offset = 1;
  int32 corruption_end_offset = 2;
}

message CvaPpgSamplerSession_v1 {
  bytes version = 1;
  int32 sample_rate_hz = 2;
  int32 meas_averaging = 3;
}

message CvaRawPpgData {
  int64 timestamp = 1;
  int64 feature_session_start_time_ms = 2;
  int32 sample_values = 3;
}

message DaytimeHrSession_v1 {
  bytes version = 1;
}

message DaytimeHrSession_v4 {
  bytes version = 1;
  int32 meditation = 2;
}

message DebugDataAcmConfigurationChanged {
  int32 timestamp = 1;
  int32 accelerometer_mode = 2;
  int32 accelerometer_odr = 3;
  int32 accelerometer_range = 4;
  int32 gyroscope_odr = 5;
  int32 gyroscope_range = 6;
  int32 accelerator_enabled_event_mask = 7;
  int32 requested_fifo_sample_depth = 8;
}

message DebugDataAfePpgSettings {
  int32 timestamp = 1;
  int32 ppg_parameter_struct_size = 2;
  int32 first_ppg_parameters = 3;
  int32 second_ppg_parameters = 4;
  int32 third_ppg_parameters = 5;
}

message DebugDataAfeStatisticsValues {
  int32 timestamp = 1;
  int32 total_measurement_count = 2;
}

message DebugDataBackgroundDFUState {
  int32 timestamp = 1;
  int32 dfu_state = 2;
}

message DebugDataBatteryLevelChanged {
  int32 timestamp = 1;
  int32 battery_level = 2;
  int32 battery_voltage = 3;
  int32 in_charger = 4;
  int32 charging = 5;
}

message DebugDataBleModeSwitch {
  int32 timestamp = 1;
  int32 ble_mode = 2;
  int32 state = 3;
}

message DebugDataBleModuleError {
  int32 timestamp = 1;
  int32 module_id = 2;
  int32 line_number = 3;
  int32 error_code = 4;
}

message DebugDataBlePairingCompleted {
  int32 timestamp = 1;
  int32 bonding_handle = 2;
  int32 error_code = 3;
  int32 bonded = 4;
}

message DebugDataBleUsageStatistics {
  int32 timestamp = 1;
  int32 ticks_fast_mode = 2;
  int32 ticks_slow_mode = 3;
  int32 ticks_advertising_mode = 4;
}

message DebugDataBondInformationRemoved {
  int32 timestamp = 1;
  int32 connection_handle = 2;
  int32 handle_to_keep = 3;
  int32 handle_to_remove = 4;
  int32 number_of_devices = 5;
  int32 error_code = 6;
}

message DebugDataBootLoaderDebugLog {
  int32 timestamp = 1;
  int32 line_number = 2;
  int32 message_type = 3;
  int32 return_value = 4;
}

message DebugDataBufferWrapped {
  int32 timestamp = 1;
  int32 buffer_id = 2;
  int32 oldest_timestamp = 3;
}

message DebugDataChargerFirmwareAndPSN {
  int32 timestamp = 1;
  int32 charger_fw_major = 2;
  int32 charger_fw_minor = 3;
  int32 charger_fw_patch = 4;
  int32 psn = 5;
}

message DebugDataChargingEndStatistics {
  int32 timestamp = 1;
  int32 charging_event_durations = 2;
  int32 estimated_time_in_cc_phage_in_seconds = 3;
  int32 battery_capasity_percentage_start = 4;
  int32 battery_capasity_percentage_end = 5;
  int32 battery_voltage_start_in_mv = 6;
  int32 battery_voltage_end_in_mv = 7;
  int32 charging_ended_reason = 8;
}

message DebugDataChargingEndStatisticsContinued {
  int32 timestamp = 1;
  int32 max_battery_voltage = 2;
  int32 temp_before_charging = 3;
  int32 max_temp_during_charging = 4;
  int32 slope_meas_voltage_start = 5;
  int32 slope_meas_voltage_end = 6;
  int32 slope_meas_duration = 7;
}

message DebugDataChargingTime {
  int32 timestamp = 1;
  int32 charging_time_ms = 2;
}

message DebugDataCrashDump {
  int32 timestamp = 1;
  int32 assert_source = 2;
  int32 line_number = 3;
  int32 message = 4;
}

message DebugDataCrashDumpEventQueue {
  int32 timestamp = 1;
  int32 queue_type = 2;
  int32 number_of_free_slots = 3;
  int32 event_id = 4;
  int32 number_of_events = 5;
}

message DebugDataDataReliabilityIndex {
  int32 timestamp = 1;
  int32 ir_first_value = 2;
  int32 ir_second_value = 3;
  int32 red_first_value = 4;
  int32 red_second_value = 5;
  int32 green_first_value = 6;
  int32 green_second_value = 7;
}

message DebugDataEventSyncCacheStatistics {
  int32 timestamp = 1;
  int32 header_read_count_from_cache = 2;
  int32 header_read_count_from_flash = 3;
  int32 event_read_count_from_cache = 4;
  int32 event_read_count_from_flash = 5;
}

message DebugDataEventSyncStatistics {
  int32 timestamp = 1;
  int32 connection_interval = 2;
  int32 synced_bytes_count = 3;
  int32 sync_duration_in_ms = 4;
  int32 mtu = 5;
}

message DebugDataFieldTestInformation1 {
  int32 timestamp = 1;
  int32 number_of_hw_tests = 2;
}

message DebugDataFieldTestInformation2 {
  int32 timestamp = 1;
  int32 test_index = 2;
  int32 hw_test_identifier = 3;
}

message DebugDataFieldTestInformation3 {
  int32 timestamp = 1;
  int32 test_index = 2;
  int32 hw_test_identifier = 3;
  int32 hw_test_result_code = 4;
}

message DebugDataFieldTestInformation4 {
  int32 timestamp = 1;
  int32 number_of_tests_ran = 2;
  int32 last_hw_result_code = 3;
}

message DebugDataFieldTestMcuPinConfigInfo0 {
  int32 timestamp = 1;
  int32 port = 2;
  int32 info_type = 3;
  int32 gpio_output_buffer_drive_mode = 4;
  int32 gpio_input_buffer_voltage_threshold = 5;
  int32 gpio_output_buffer_slewrate_and_drive_strength = 6;
}

message DebugDataFieldTestMcuPinConfigInfo1 {
  int32 timestamp = 1;
  int32 port = 2;
  int32 info_type = 3;
  int32 port_sio_configuration = 4;
  int32 port_interrupt_edge_trigger_and_filter_configuration = 5;
  int32 port_masked_interrupt_status = 6;
}

message DebugDataFingerDetection {
  int32 timestamp = 1;
  int32 average_ir_led2 = 2;
  int32 minimum_ir_led2 = 3;
  int32 maximum_ir_led2 = 4;
  int32 measurement_count = 5;
}

message DebugDataFlashUsageStatistics {
  int32 timestamp = 1;
  int32 ticks_reading_flash = 2;
  int32 ticks_writing_flash = 3;
  int32 ticks_erasing_flash = 4;
}

message DebugDataFuelGaugeLoggingRegisters {
  int32 timestamp = 1;
  int32 cycles_register = 2;
  int32 full_cap_rep_register = 3;
  int32 full_cap_nom_register = 4;
  int32 learncfg_register = 5;
  int32 vf_soc_register = 6;
}

message DebugDataFuelGaugeRegisterDump {
  int32 timestamp = 1;
  int32 dump_type = 2;
  int32 is_valid = 3;
  int32 struct_version = 4;
  int32 reg_temp_co = 6;
  int32 reg_full_cap_rep = 7;
  int32 reg_cycles = 8;
  int32 reg_full_cap_num = 9;
}

message DebugDataFuelGaugeStatistics {
  int32 timestamp = 1;
  int32 battery_percentage = 2;
  int32 average_battery_voltage = 3;
  int32 average_current_consumption = 4;
  int32 remaining_capacity = 5;
  int32 coulomb_counter = 6;
}

message DebugDataHardwareTestAdjacentPinAdcCheckData {
  int32 timestamp = 1;
  int32 input_port_number = 2;
  int32 input_pin_number = 3;
  int32 output_port_number = 4;
  int32 output_pin_number = 5;
  int32 test_adc_results_in_mv = 6;
}

message DebugDataHardwareTestBatteryDcirTestData1 {
  int32 timestamp = 1;
  int32 battery_dcir_resistance = 2;
  int32 measured_battery_voltage_mv_v1 = 3;
  int32 measured_battery_voltage_mv_v2 = 4;
  int32 measured_battery_voltage_mv_v3 = 5;
  int32 vled_voltage_ir_led_mv = 7;
}

message DebugDataHardwareTestBatteryDcirTestData2 {
  int32 timestamp = 1;
  int32 battery_current_while_load_on_ma = 2;
  int32 battery_current_while_load_off_ma = 3;
  int32 gauge_measured_soc_percent_at_start = 4;
  int32 battery_temperature_at_start = 5;
}

message DebugDataHardwareTestExternalClockMeasurementData {
  int32 timestamp = 1;
  int32 external_hf_clock_start_retries = 2;
  int32 external_hf_clock_run_failure = 3;
  int32 external_hf_clock_frequency_diff_against_internal_oscillator = 4;
  int32 external_lf_clock_start_retries = 5;
  int32 external_lf_clock_run_failure = 6;
  int32 external_hf_clock_frequency_diff_against_external_lf_oscillator = 7;
}

message DebugDataHardwareTestPinAdcCheckData {
  int32 timestamp = 1;
  int32 pin_port_number = 2;
  int32 pin_number = 3;
  int32 adc_check_type = 4;
  int32 first_adc_result_in_mv = 5;
  int32 second_adc_result_in_mv = 6;
  int32 third_adc_result_in_mv = 7;
  int32 fourth_adc_result_in_mv = 8;
}

message DebugDataHardwareTestResultValues {
  int32 timestamp = 1;
  int32 test_id = 2;
  int32 test_duration = 3;
  int32 average_current = 4;
  int32 temperature = 5;
  int32 start_vbat = 6;
  int32 end_vbat = 7;
  int32 minimum_current = 8;
  int32 maximum_current = 9;
}

message DebugDataHardwareTestStartValues {
  int32 timestamp = 1;
  int32 test_id = 2;
  int32 test_duration = 3;
  int32 valid_argument_count = 4;
  int32 argument1 = 5;
  int32 argument2 = 6;
}

message DebugDataHrSettingsData {
  int32 timestamp = 1;
  int32 led_on = 2;
  int32 adc_on = 3;
  int32 period = 4;
  int32 gain_setting = 7;
  int32 selected_hr_config = 9;
  int32 amplitude_state = 10;
}

message DebugDataLegacySecurityFailure {
  int32 timestamp = 1;
  int32 failure_type = 2;
  int32 message_id = 3;
  int32 data_part_length = 4;
  int32 value_part_length = 5;
}

message DebugDataOpenAfePpgSettingsData {
  int32 timestamp = 1;
  int32 afe_hwid = 2;
}

message DebugDataPeriodInfoStatistics {
  int32 timestamp = 1;
  int32 ticks_measuring_last_period = 2;
  int32 systime_spent_in_last_state_s = 3;
  int32 pfsm_state = 4;
}

message DebugDataPpgSignalQualityStats {
  int32 timestamp = 1;
  int32 measurement_duration = 8;
  int32 content_mask = 9;
  int32 dc_value = 10;
  int32 ac_scaler = 11;
  int32 ac_amplitude = 12;
  int32 snr_value = 13;
  int32 coupling_index = 14;
  int32 tune_reason = 15;
  int32 ibi_quality_percentage = 16;
}

message DebugDataRawDataDump {
  int32 timestamp = 1;
  int32 event_index = 2;
  int32 raw_data_bytes = 3;
}

message DebugDataRawRingBatteryVoltage {
  int32 timestamp = 1;
  int32 continued = 2;
  int32 interval_type = 3;
  int32 first_raw_voltage_mv = 4;
  int32 battery_voltage_deltas_mv = 5;
}

message DebugDataRingHwInformation {
  int32 timestamp = 1;
  int32 hw_version = 2;
  int32 ring_size = 3;
  int32 battery_type = 4;
  int32 acm_type = 5;
  int32 afe_type = 6;
  int32 eflash_type = 7;
}

message DebugDataRingRotationIndexContributor {
  int32 timestamp = 1;
}

message DebugDataSecurityFailure {
  int32 timestamp = 1;
  int32 failure_type = 2;
  int32 bd_handle = 3;
  int32 auth_failure = 4;
  int32 bonded_security_level = 5;
}

message DebugDataSleepStatistics {
  int32 timestamp = 1;
  int32 ticks_in_deep_sleep = 2;
  int32 ticks_in_sleep = 3;
  int32 ticks_awake = 4;
  int32 pfsm_state = 5;
}

message DebugDataStackUsageStatistics {
  int32 timestamp = 1;
  int32 measurement_duration_s = 6;
}

message DebugEventInd {
  int32 timestamp = 1;
  int32 text = 2;
}

message EditBedtime {
  int64 sleepdate_ms = 1;
  int32 sleep_period_id = 2;
  int64 new_bedtime_start_ms = 3;
  int64 new_bedtime_end_ms = 4;
}

message EhrAcmIntensityEvent {
  int32 timestamp = 1;
  int32 intensity1 = 2;
  int32 intensity2 = 3;
  int32 intensity3 = 4;
  int32 intensity4 = 5;
  int32 intensity5 = 6;
  int32 intensity6 = 7;
  int32 intensity7 = 8;
}

message EhrTraceEvent {
  int32 timestamp = 1;
  int32 message_counter = 2;
  int32 trace_type = 3;
}

message Events {
  int32 event = 1;
}

message ExerciseHrSession_v1 {
  int32 activity = 1;
  int32 min_hr = 2;
  int32 max_hr = 3;
}

message ExerciseHrSession_v2 {
  int32 algorithm_version = 1;
  int32 reserved = 2;
}

message FeatureSession {
  int32 event = 1;
}

message FeatureSessionEvent {
  int64 timestamp = 1;
  bytes capability = 2;
  bytes status = 3;
}

message GreenIbiAndAmpEvent {
  int32 timestamp = 1;
  int32 ibi_ms = 2;
  int32 amp = 3;
}

message GreenIbiQualityEvent {
  int32 timestamp = 1;
  int32 ibi = 2;
  int32 validity = 3;
  int32 quality = 4;
}

message HrvEvent {
  int32 timestamp = 1;
}

message IbiAndAmplitudeEvent {
  int32 timestamp = 1;
  int32 ibi = 2;
  int32 amp = 3;
}

message IndCommUartDetails {
  bytes self_test_result = 1;
  bytes vboost_ctrl = 2;
  bytes comm_uart_tx = 3;
  bytes comm_uart_rx = 4;
  bytes comm_uart_rx_adc_out = 5;
}

message LinkParams {
  int32 min_mv = 1;
  int32 max_mv = 2;
  int32 avg_mv = 3;
  int32 boost_level = 4;
  int32 fg_current = 5;
}

message MeasQualityEvent {
  int32 timestamp = 1;
  int32 cqi = 2;
  int32 pqi = 3;
}

message MotionEvent {
  int32 timestamp = 1;
  int32 orientation = 2;
  int32 motion_seconds = 3;
  int32 average_x = 4;
  int32 average_y = 5;
  int32 average_z = 6;
  int32 regularity = 7;
  int32 low_intensity = 8;
  int32 high_intensity = 9;
}

message MotionPeriod {
  int32 timestamp = 1;
  int32 event_type = 2;
  int32 sequence_number = 3;
}

message OldRawPpgData {
  int64 timestamp = 1;
  int64 period_start_time_ms = 2;
  int32 sample_values = 3;
}

message OnDemandMeas {
  int32 timestamp = 1;
  int32 skin_temp_celsius_hundreths = 2;
  int32 registered_motion_periods = 3;
  int32 average_hr = 4;
  int32 average_hrv = 5;
  int32 average_breathing_rate_per_minute = 6;
  int32 raw_ppg_sampling_rate = 7;
}

message OnDemandMotion {
  int32 timestamp = 1;
  int32 motion_counts = 2;
}

message OnDemandSession {
  int32 timestamp = 1;
  int32 event_subtype = 2;
  int32 skin_temp_interval_s = 3;
  int32 motion_period_interval_s = 4;
  int32 hr_interval_s = 5;
  int32 hrv_interval_s = 6;
  int32 breathing_rate_interval_s = 7;
  int32 raw_ppg_ppfg_rate_hz = 8;
  int32 max_session_duration_min = 9;
}

message OpenAfeParameters {
  int32 ppg_measurement_slot = 1;
  int32 led_channel_description_id = 2;
  int32 led_current_in_half_ma_resolution = 3;
  bytes meas_tint = 6;
  int32 adc_range = 7;
  int32 dac_offset = 8;
  bytes average_in_measurement_sample = 9;
  int32 hr_feature_mask = 10;
  int32 pd_setlng = 11;
  int32 led_setlng = 12;
  int32 led_range = 13;
}

message PpgAmplitudeInd {
  int32 timestamp = 1;
  int32 cv_ppg_amplitude = 2;
}

message RawPpgData {
  int32 measurement = 1;
}

message RawPpgMeasurement {
  int64 start_time = 1;
  int32 sample = 2;
  bytes cva_ppg_sampler = 3;
}

message RawPpgSummary {
  int32 timestamp = 1;
  int32 period_start_ms = 2;
  int32 selection_criteria = 3;
  int32 ppg_sample_rate_hz = 4;
  int32 sample_scale_factor = 5;
}

message RealStepsFFTset {
  int32 total_amplitude_mg = 1;
  int32 stride_frequency = 2;
  int32 stride_amplitude_frac = 3;
  int32 first_non_locomotor_frequency = 4;
  int32 first_non_locomotor_amplitude_frac = 5;
  int32 gait_amplitude_frac = 6;
  int32 frequency_bin_high_frac = 7;
  int32 frequency_bin_mid_frac = 8;
}

message RealStepsFeatures {
  int32 timestamp = 1;
  int32 first_fft_set = 2;
  int32 second_fft_set = 3;
  int32 third_fft_set = 4;
  int32 sum_accel_mg_std = 5;
  int32 y_accel_std_ratio = 6;
  int32 z_accel_std_ratio = 7;
}

message RealStepsSession_v1 {
  bytes version = 1;
}

message RepDebugData {
  int32 input_corruption_log = 1;
}

message RestingHrSession_v1 {
  int32 algorithm_version = 1;
}

message RestingHrSession_v2 {
  int32 algorithm_version = 1;
  bool high_frequency_mode = 2;
}

message RingStartInd {
  int32 timestamp = 1;
  int32 resetreas_bit_map = 2;
  int32 hard_fault_indicator = 3;
  int32 ring_firmware_version_major = 4;
  int32 ring_firmware_version_middle = 5;
  int32 ring_firmware_version_minor = 6;
  int32 ring_bootloader_version_major = 7;
  int32 ring_bootloader_version_middle = 8;
  int32 ring_bootloader_version_minor = 9;
  int32 ring_api_version_major = 10;
  int32 ring_api_version_middle = 11;
  int32 ring_api_version_minor = 12;
  int32 ring_factory_reset_state = 13;
  int32 ring_debug_fw_used = 14;
  int32 ring_type = 15;
}

message ScanEnd {
  int32 timestamp = 1;
  int32 success_code = 2;
  int32 scan_duration_sec = 3;
  int32 slot = 4;
  int32 channel_id = 8;
  int32 pd_mask = 12;
}

message ScanStart {
  int32 timestamp = 1;
  int32 triggering_feature = 2;
  int32 trigger_reason = 3;
  int32 classification_metric = 4;
}

message SelftestDataEvent {
  int32 timestamp = 1;
  int32 executed_test = 2;
  int32 failed_test = 3;
  int32 result = 4;
  int32 selftest_id = 5;
  int32 detailed_id = 6;
  int32 detailed_data = 7;
}

message SelftestData_AFE {
  int32 part_id = 1;
  int32 led_pd_samples = 2;
  int32 ecg_samples = 3;
  int32 bioz_samples = 4;
}

message SelftestData_Clock {
  int32 part_id = 1;
  bytes source = 2;
}

message SelftestData_PMIC {
  int32 part_id = 1;
  int32 fault_bits = 6;
}

message SelftestData_TempCrosscheck {
  int32 part_id = 1;
  int32 reference_temp = 2;
  int32 accelerometer_temp = 3;
  int32 fuel_gauge_temp = 4;
  int32 cpu_temp = 5;
  int32 pmic_temp = 6;
}

message SelftestEvent {
  int64 timestamp = 1;
  int32 passed_test = 2;
  int32 failed_test = 3;
}

message SleepAcmPeriod {
  int32 timestamp = 1;
  int32 tmean = 2;
  int32 max = 3;
  int32 iqr = 4;
  int32 mad_tmean = 5;
  int32 mad_max = 6;
  int32 mad_iqr = 7;
}

message SleepPeriodInfo {
  int32 timestamp = 1;
  int32 average_hr = 2;
  int32 hr_trend = 3;
  int32 mzci = 4;
  int32 dzci = 5;
  int32 breath = 6;
  int32 breath_v = 7;
  int32 motion_count = 8;
  int32 sleep_state = 9;
  int32 cv = 10;
}

message SleepPhaseData {
  int32 timestamp = 1;
  int32 start_time = 2;
  int32 sleep_phases = 3;
}

message SleepPhaseDetails {
  int32 timestamp = 1;
  int32 start_time = 2;
  int32 sleep_phases = 3;
}

message SleepSummary1 {
  int32 timestamp = 1;
  int32 bedtime_start = 2;
  int32 bedtime_end = 3;
  int32 start_timezone_seconds = 4;
  int32 end_timezone_seconds = 5;
}

message SleepSummary2 {
  int32 timestamp = 1;
  int32 lowest_hr_during_night = 7;
  int32 sleep_quality_score = 8;
  int32 wake_up_count = 9;
}

message SleepSummary3 {
  int32 timestamp = 1;
  int32 average_breath_rate = 2;
  int32 std_dev_breath_rate = 3;
  int32 average_heart_rate = 4;
  int32 midpoint_of_sleep = 5;
  int32 highest_temperature = 6;
  int32 restless_period_count = 7;
  int32 got_up_count = 8;
}

message SleepSummary4 {
  int32 timestamp = 1;
  int32 sleep_score_contrib = 2;
  int32 deep_sleep_score_contrib = 3;
  int32 rem_sleep_score_contrib = 4;
  int32 sleep_efficiency_score_contrib = 5;
  int32 sleep_latency_score_contrib = 6;
  int32 sleep_disturbances_score_contrib = 7;
  int32 circadian_alignment_score_contrib = 8;
}

message SleepTempEvent {
  int32 timestamp = 1;
  int32 temp = 2;
}

message Spo2ComboData {
  int32 event = 1;
}

message Spo2ComboEvent {
  int64 timestamp = 1;
  int32 items = 2;
  int32 flush = 3;
}

message Spo2DcEvent {
  int32 channel_index = 1;
  int32 beat_index = 2;
  int64 timestamp = 3;
  int32 dc = 4;
}

message Spo2Event {
  int32 timestamp = 1;
  int32 beat_offset = 2;
  int32 beat_index = 3;
  int32 timestamp_fixed = 5;
  int32 flush = 6;
}

message Spo2IbiAndAmplitudeEvent {
  int32 timestamp = 1;
  int32 ibi_ms = 2;
  int32 amp = 3;
  int32 beat_index = 4;
  int32 channel_id = 5;
}

message Spo2Item {
  int32 red_dc = 1;
  int32 ir_dc = 2;
  int32 ir_amplitude = 3;
  int32 ir_pulse_count = 4;
  int32 spo2 = 5;
}

message Spo2Session_v1 {
  bytes version = 1;
}

message Spo2Session_v3 {
  bytes version = 1;
  bool high_frequency_mode = 2;
}

message Spo2StableEvent {
  int32 timestamp = 1;
  int32 duration_seconds = 3;
}

message StateChangeInd {
  int32 timestamp = 1;
  int32 state = 2;
  int32 text = 3;
}

message SupplyDetails {
  bytes self_test_result = 1;
  int32 current_vdd_supply_mask = 2;
  int32 fail_vdd_supply_mask = 3;
}

message TempEvent {
  int32 timestamp = 1;
  int32 temp1 = 2;
  int32 temp2 = 3;
  int32 temp3 = 4;
  int32 temp4 = 5;
  int32 temp5 = 6;
  int32 temp6 = 7;
  int32 temp7 = 8;
}

message TempPeriod {
  int32 timestamp = 1;
  int32 temp = 2;
}

message TimeSyncInd {
  int32 timestamp = 1;
  int32 ring_time = 2;
  int32 timezone_seconds = 3;
}

message TimeSyncIndSkipped {
  int32 timestamp = 1;
  int32 ring_time = 2;
  int32 timezone_seconds = 3;
  int32 skip_reason = 4;
}

message UsbVoltageDetails {
  bytes self_test_result = 1;
}

message Version {
  int32 major = 1;
  int32 middle = 2;
  int32 minor = 3;
}

message WearEvent {
  int32 timestamp = 1;
  int32 state = 2;
  int32 text = 3;
}

